[project]
name = "pyreflyrenamerror"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Raouf Ben Hassine", email = "raouf.benhassine@achieve-test-prep.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
pyreflyrenamerror = "pyreflyrenamerror:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.5.0",
    "pyrefly>=0.45.2",
    "ruff>=0.14.9",
]
